# opentelemetry-betterproto

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
opentelemetry-betterproto/: .gitignore  README.md  pyproject.toml  test.py
opentelemetry-betterproto/opentelemetry_betterproto/opentelemetry/proto/collector/profiles/v1development/: __init__.py
opentelemetry-betterproto/opentelemetry_betterproto/opentelemetry/proto/collector/trace/v1/: __init__.py
opentelemetry-betterproto/opentelemetry_betterproto/opentelemetry/proto/common/v1/: __init__.py
opentelemetry-betterproto/opentelemetry_betterproto/opentelemetry/proto/profiles/v1development/: __init__.py
opentelemetry-betterproto/opentelemetry_betterproto/opentelemetry/proto/resource/v1/: __init__.py
opentelemetry-betterproto/opentelemetry_betterproto/opentelemetry/proto/trace/v1/: __init__.py
src/opentelemetry_betterproto/opentelemetry/proto/collector/logs/v1/: __init__.py
src/opentelemetry_betterproto/opentelemetry/proto/collector/metrics/v1/: __init__.py
src/opentelemetry_betterproto/opentelemetry/proto/logs/v1/: __init__.py
src/opentelemetry_betterproto/opentelemetry/proto/metrics/v1/: __init__.py
tests/: test_basic.py
utils/: README.md  client.py  otel-config-json-to-json.yaml  otel-config-json-to-otlp.yaml  otel-config-json-to-terminal.yaml  otel-config-otlp-to-json-otlp.yaml  otel-config-otlp-to-json.yaml  server.py  test_import.py
