[project]
name = "opentelemetry-betterproto"
version = "0.1.0"
description = "OpenTelemetry-proto for Python using python-betterproto"
readme = "README.md"
authors = [
    { name = "Tilo Wiklund", email = "tilo.wiklund@sensmetry.com" } 
]
requires-python = ">=3.11"
dependencies = [
    "betterproto~=2.0.0b7",
    "grpcio~=1.67.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "betterproto[compiler]~=2.0.0b7",
    "grpcio-tools~=1.66.2",
    "pytest>=8.3.3",
    "ruff>=0.6.9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]