[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "opentelemetry-betterproto"
version = "0.0.1"
authors = [
  { name="Tilo Wiklund", email="tilo.wiklund@sensmetry.com" },
]
description = "OpenTelemetry Python using betterproto"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
dependencies = [
  "betterproto~=2.0.0b7",
  "grpcio-tools~=1.66.2",
  "pydantic~=2.9.2"
]
classifiers = [
    "Programming Language :: Python :: 3"
]

[project.urls]
Homepage = "https://github.com/EOEPCA/resource-health"
Issues = "https://github.com/EOEPCA/resource-health/issues"
